<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="RadioButton_main">主页</string>
    <string name="RadioButton_msg">消息</string>
    <string name="RadioButton_login">登录</string>
    <string name="RadioButton_honor">荣誉</string>
    <string name="RadioButton_works">作品</string>
</resources>
