<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton 
            android:id="@+id/first" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E7E7E8"
            android:drawableTop="@drawable/color_radiobutton1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/RadioButton_main"
            android:textColor="@drawable/color_radio_text"/>
        
        <RadioButton 
            android:id="@+id/second" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E7E7E8"
            android:drawableTop="@drawable/color_radiobutton2"
            android:gravity="center_horizontal"
            android:button="@null"
            android:text="@string/RadioButton_msg"
            android:textColor="@drawable/color_radio_text"/>
        
        <RadioButton 
            android:id="@+id/third" 
            android:layout_width="0dp"
            android:checked="true"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E7E7E8"
            android:drawableTop="@drawable/color_radiobutton3"
            android:gravity="center_horizontal"
            android:button="@null"
            android:text="@string/RadioButton_login"
            android:textColor="@drawable/color_radio_text"/>
        
        <RadioButton 
            android:id="@+id/four" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E7E7E8"
            android:drawableTop="@drawable/color_radiobutton4"
            android:gravity="center_horizontal"
            android:button="@null"
            android:text="@string/RadioButton_honor"
            android:textColor="@drawable/color_radio_text"/>
        
        <RadioButton 
            android:id="@+id/five" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E7E7E8"
            android:drawableTop="@drawable/color_radiobutton5"
            android:gravity="center_horizontal"
            android:button="@null"
            android:text="@string/RadioButton_works"
            android:textColor="@drawable/color_radio_text"/>
         

    </RadioGroup>
    
    

</RelativeLayout>